RESOLVED FIXED280540
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-justify-content-horiz-003.xhtml
https://bugs.webkit.org/show_bug.cgi?id=280540
Summary [FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-justify-con...
alan
Reported 2024-09-27 13:47:38 PDT
ssia
Attachments
[fast-cq]Patch (5.81 KB, patch)
2024-09-27 13:54 PDT, alan
no flags
alan
Comment 1 2024-09-27 13:54:44 PDT
Created attachment 472712 [details] [fast-cq]Patch
EWS
Comment 2 2024-09-28 05:15:22 PDT
Committed 284412@main (e481ab72fabc): <https://commits.webkit.org/284412@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472712 [details].
Radar WebKit Bug Importer
Comment 3 2024-09-28 05:16:16 PDT
Note You need to log in before you can comment on or make changes to this bug.