[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-justify-content-horiz-003.xhtml https://bugs.webkit.org/show_bug.cgi?id=280540

Reviewed by Antti Koivisto.

Implement fallback values for space-between, space-around and space-evenly.
It handles both overflowing and lone flex item cases.
(FFC already handled the lone case, but let's use the fallback mechanism instead.)

* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::handleMainAxisAlignment const):

Canonical link: https://commits.webkit.org/284412@main